# hspec-discover-example

./: default.nix  stack.yaml
my-library/: my-library.cabal
my-library/unit-test/: MyLibrarySpec.hs
