name:                my-library
version:             0.1.0.0
cabal-version:       >= 2.0
build-type:          Simple

test-suite unit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      unit-test
  main-is:             Main.hs
  other-modules:       MyLibrarySpec
  build-depends:       base
                     , hspec
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fhide-source-paths
  build-tool-depends:  hspec-discover:hspec-discover
